Fixed a bug with the loading of a graph on a tile. UI change where it was hard to see the dropdown menu on the float menu. Fixed bug where x-axis label would not change after being loaded in from tile. In the hierarchy dropdown got rid of the option of being able to clear the selection

--- a/assets/css/AAA - stylesheet1.css
+++ b/assets/css/AAA - stylesheet1.css
@@ -614,7 +614,6 @@ there.
     margin-left: 20px;
     margin-right: 20px;
     flex-grow: 1;
-    overflow: auto;
 }
 
 
@@ -1278,7 +1277,7 @@ there.
     margin-right: auto;
     background: #fffafa;
     box-shadow: rgb(20, 20, 20) 0 10px 20px;
-    max-height: 90%;
+    max-height: 80%;
     overflow-y: auto;
 }
 
